feat(pterodactyl_panel): add backups support

--- a/roles/pterodactyl_panel/templates/env.j2
+++ b/roles/pterodactyl_panel/templates/env.j2
@@ -43,3 +43,12 @@ QUEUE_STANDARD=standard
 QUEUE_LOW=low
 
 APP_ENVIRONMENT_ONLY=false
+
+{% if pterodactyl_panel_backup_enable %}
+APP_BACKUP_DRIVER={{ pterodactyl_panel_backup_driver }}
+AWS_DEFAULT_REGION={{ pterodactyl_panel_aws_default_region }}
+AWS_ACCESS_KEY_ID={{ pterodactyl_panel_aws_access_key_id }}
+AWS_SECRET_ACCESS_KEY={{ pterodactyl_panel_aws_secret_access_key }}
+AWS_BACKUPS_BUCKET={{ pterodactyl_panel_aws_backups_bucket }}
+AWS_ENDPOINT={{ pterodactyl_panel_aws_endpoint }}
+{% endif %}
