:bug: Fixed a bug when using a specific character in $DB_PASSWORD

--- a/roles/pterodactyl_panel/templates/env.j2
+++ b/roles/pterodactyl_panel/templates/env.j2
@@ -13,7 +13,7 @@ DB_HOST={{ pterodactyl_panel_db_host }}
 DB_PORT={{ pterodactyl_panel_db_port }}
 DB_DATABASE={{ pterodactyl_panel_db_name }}
 DB_USERNAME={{ pterodactyl_panel_db_user }}
-DB_PASSWORD={{ pterodactyl_panel_db_password }}
+DB_PASSWORD="{{ pterodactyl_panel_db_password }}"
 
 HASHIDS_SALT={{ pterodactyl_panel_hashids_salt }}
 HASHIDS_LENGTH=8
