panel: add pterodactyl_panel_environment_only var

--- a/roles/pterodactyl_panel/templates/env.j2
+++ b/roles/pterodactyl_panel/templates/env.j2
@@ -5,7 +5,7 @@ APP_THEME=pterodactyl
 APP_TIMEZONE={{ pterodactyl_panel_timezone | quote }}
 APP_CLEAR_TASKLOG=720
 APP_DELETE_MINUTES=10
-APP_ENVIRONMENT_ONLY=true
+APP_ENVIRONMENT_ONLY={{ pterodactyl_panel_environment_only }}
 LOG_CHANNEL=daily
 APP_LOCALE={{ pterodactyl_panel_locale | quote }}
 
@@ -41,8 +41,6 @@ REDIS_PORT=6379
 QUEUE_HIGH=high
 QUEUE_STANDARD=standard
 QUEUE_LOW=low
-
-APP_ENVIRONMENT_ONLY=false
 
 {% if pterodactyl_panel_backup_enable %}
 APP_BACKUP_DRIVER={{ pterodactyl_panel_backup_driver | quote }}
