add more and custom config options
Fixes #248

--- a/roles/pterodactyl_panel/templates/env.j2
+++ b/roles/pterodactyl_panel/templates/env.j2
@@ -1,10 +1,10 @@
 APP_ENV=production
 APP_DEBUG=false
 APP_KEY={{ pterodactyl_panel_app_key | quote }}
-APP_THEME=pterodactyl
+APP_THEME={{ pterodactyl_panel_theme | quote }}
 APP_TIMEZONE={{ pterodactyl_panel_timezone | quote }}
-APP_CLEAR_TASKLOG=720
-APP_DELETE_MINUTES=10
+APP_CLEAR_TASKLOG={{ pterodactyl_panel_clear_tasklog }}
+APP_DELETE_MINUTES={{ pterodactyl_panel_delete_minutes }}
 APP_ENVIRONMENT_ONLY={{ pterodactyl_panel_environment_only }}
 LOG_CHANNEL=daily
 APP_LOCALE={{ pterodactyl_panel_locale | quote }}
@@ -51,3 +51,7 @@ AWS_BACKUPS_BUCKET={{ pterodactyl_panel_aws_backups_bucket | quote }}
 AWS_ENDPOINT={{ pterodactyl_panel_aws_endpoint | quote }}
 AWS_USE_PATH_STYLE_ENDPOINT={{ pterodactyl_panel_aws_use_path_style_endpoint }}
 {% endif %}
+
+{% for item in pterodactyl_panel_extra_env | dict2items %}
+{{ item.key }}={% if item.value is string %}{{ item.value | quote }}{% else %}{{ item.value }}{% endif %}
+{% endfor %}
