fix: panel: only put aws backup configuration if the driver is s3
This commit removes the aws related configuration in the panel environment
variables if the selected backup driver is not `s3`.

This is useful if the user needs to specify additional `wings` related
variables, cf.
https://github.com/pterodactyl/panel/blob/1.0-develop/config/backups.php

Feels cleaner that way too: if any more variables or storage drivers emerge
in the future, this commit will ease template maintenance.

--- a/roles/pterodactyl_panel/templates/env.j2
+++ b/roles/pterodactyl_panel/templates/env.j2
@@ -44,12 +44,14 @@ QUEUE_LOW=low
 
 {% if pterodactyl_panel_backup_configure %}
 APP_BACKUP_DRIVER={{ pterodactyl_panel_backup_driver | quote }}
+{% if pterodactyl_panel_backup_driver == 's3' %}
 AWS_DEFAULT_REGION={{ pterodactyl_panel_aws_default_region | quote }}
 AWS_ACCESS_KEY_ID={{ pterodactyl_panel_aws_access_key_id | quote }}
 AWS_SECRET_ACCESS_KEY={{ pterodactyl_panel_aws_secret_access_key | quote }}
 AWS_BACKUPS_BUCKET={{ pterodactyl_panel_aws_backups_bucket | quote }}
 AWS_ENDPOINT={{ pterodactyl_panel_aws_endpoint | quote }}
 AWS_USE_PATH_STYLE_ENDPOINT={{ pterodactyl_panel_aws_use_path_style_endpoint }}
+{% endif %}
 {% endif %}
 
 {% for item in pterodactyl_panel_extra_env | dict2items %}
